[workspace]
members = ["macros"]

[workspace.package]
authors = ["Andelf <andelf@gmail.com>"]
repository = "https://github.com/hpmicro-rs/hpm-riscv-rt"
documentation = "https://docs.rs/hpm-riscv"
homepage = "https://github.com/hpmicro-rs/hpm-riscv-rt"
categories = ["embedded", "no-std", "hardware-support"]
license = "MIT/Apache-2.0"
version = "0.3.1"
edition = "2021"

[package]
name = "hpm-riscv-rt"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
description = "Runtime support for HPMicro RISC-V MCUs"
keywords = ["hpmicro", "hpm", "riscv", "runtime"]
readme = "README.md"
build = "build.rs"

[dependencies]
riscv = { version = "0.15", features = ["critical-section-single-hart"] }
andes-riscv = "0.1.2"

# Macros
hpm-riscv-rt-macros = { version = "0.3.0", path = "macros" }

[build-dependencies]

[features]
default = []
# HPM6700 series errata workaround:
# - Ignore illegal instruction exception with mtval=0
# - Configure PMA to make RTT control block non-cacheable (D-cache fix)
hpm67-fix = []
# Dual-core support (disables single-hart optimizations)
dual-core = []
# Configure PMA to make REGION_NONCACHEABLE_RAM actually non-cacheable
# Enable for chips with D-cache that have noncacheable regions (HPM5E/62/63/67/68, NOT HPM53)
pma-noncacheable = []

[package.metadata.docs.rs]
targets = ["riscv32imafc-unknown-none-elf"]
