[package]
name = "hpm-riscv-rt-macros"
authors.workspace = true
repository.workspace = true
documentation.workspace = true
homepage.workspace = true
categories.workspace = true
license.workspace = true
edition.workspace = true
description = "Procedural macros for hpm-riscv-rt"
version = "0.3.0"

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[dependencies.syn]
version = "2.0"
features = ["extra-traits", "full"]
